--- a/hobbies.html
+++ b/hobbies.html
@@ -10,16 +10,16 @@
 <header>
 	<h1>Brycen Cloward</h1>
 	<nav>
-		<a href = "index.html" class="current"><span class = "glyphicon glyphicon-home"></span></a>
+		<a href = "index.html"><span class = "glyphicon glyphicon-home"></span></a>
 		<a href = "projects.html">Projects</a>
 		<a href = "experience.html">Experience</a>
-		<a href = "hobbies.html">Hobbies</a>
+		<a href = "hobbies.html" class="current">Hobbies</a>
 	</nav>
 </header>
 <body>
 	<div class="main">
 		<div class="left col-lg-2">
-			<a href = "#"><span class="glyphicon glyphicon-chevron-left"></span></a>
+			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
 		<div class="content col-lg-8">
 			<h1>This is where the content goes</h1>
@@ -29,19 +29,9 @@
 			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
 			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<img src = "placeholder.png" alt = "placeholder">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<div class="right col-lg-2">
-			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
+			<a href = "#"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
 </body>
