--- a/experience.html
+++ b/experience.html
@@ -22,12 +22,24 @@
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
 		<div class="content col-lg-8">
-			<h1>This is where the content goes</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1>Experience</h1>
+			<p>Experience with mutliple web languages and tools, including:</p>
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Javascript</li>
+				<li>JQuery</li>
+				<li>SASS</li>
+				<li>C#</li>
+				<li>Bootstrap</li>
+				<li>PHP</li>
+				<li>ASP.NET</li>
+				<li>WordPress</li>
+			</ul>
+			<p>Additionally, I have a year's worth of college education in web design as of right now, and have been doing web
+			design since I was a freshman in high school.</p>
+			</br>
+			</br>
 		</div>
 		<div class="right col-lg-2">
 			<a href = "hobbies.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -35,6 +47,6 @@
 	</div>
 </body>
 <footer>
-	<p>Copyright &copy Brycen Cloward 2018</p>
+	<p>Copyright &copy Brycen Cloward November 3, 2018</p>
 </footer>
 </html>
