--- a/hobbies.html
+++ b/hobbies.html
@@ -22,13 +22,22 @@
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
 		<div class="content col-lg-8">
-			<h1>This is where the content goes</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<img src = "placeholder.png" alt = "placeholder">
+			<h1>Hobbies</h1>
+			<p>My personal interests. </p>
+			<p>I enjoy being a generally creative person. I like to draw and write, but most important to me is
+			trying new creative interests.</p>
+			<h3>Other hobbies:</h3>
+			<ul>
+				<li>Gaming</li>
+				<li>Movies</li>
+				<li>Reading</li>
+				<li>DIY Projects</li>
+			</ul>
+			<p>I like to tinker with technology. Whether it be with hardware (computer building and Arduino projects) or
+			software (programming projects and experimentation), I'm always eager to learn more about how I can use my
+			skills to do cool things while building valuable knowledge at the same time.</p>
+			</br>
+			</br>
 		</div>
 		<div class="right col-lg-2">
 			<a href = "#"><span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -36,6 +45,6 @@
 	</div>
 </body>
 <footer>
-	<p>Copyright &copy Brycen Cloward 2018</p>
+	<p>Copyright &copy Brycen Cloward November 3, 2018</p>
 </footer>
 </html>
