--- a/index.html
+++ b/index.html
@@ -22,23 +22,19 @@
 			<a href = "#"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
 		<div class="content col-lg-8">
-			<h1>This is where the content goes</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<img src = "placeholder.png" alt = "placeholder">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1>This is Me</h1>
+			<p>My name is Brycen Cloward. I'm originally from Kuna, Idaho, and am now residing in Lewiston, Idaho.
+			</p>
+			<img src = "images/me.jpg" alt = "me">
+			<p>I had my first exposure with web design when I was a freshman in high school. Through a program known as PTECH,
+			I learned about the basics of web design through dual-credit courses. Learning about and experiencing web design,
+			along with support from PTECH, inspired me to learn more. Through the PTECH program, I was able to continue on the
+			path to web design, and I was able to get many college credits way before most of my peers got the opportunity to
+			do so.</p>
+			<p>Now I am attending Lewis-Clark State College to finish my degree in Web Design and Development. I am a freshman,
+			but I will have completed an Associate's degree, by the end of the year.</p>
+			</br>
+			</br>
 		</div>
 		<div class="right col-lg-2">
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -46,6 +42,6 @@
 	</div>
 </body>
 <footer>
-	<p>Copyright &copy Brycen Cloward 2018</p>
+	<p>Copyright &copy Brycen Cloward November 3, 2018</p>
 </footer>
 </html>
