--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,14 @@
 			<a href = "index.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
 		<div class="content col-lg-8">
-			<h1>This is where the content goes</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-			ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-			laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-			velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-			sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<img src = "placeholder.png" alt = "placeholder">
+			<h1>Projects</h1>
+			<p>The majority of projects that I have worked on up to this point have been for college.</p>
+			<p>For example, my involvement with this project:</p>
+			<img src = "images/nsg1.png" alt = "nsg" width = "100%">
+			<p>This project was created in WordPress, and showcases a fully functioning website and store.</p>
+			<img src = "images/nsg2.png" alt = "nsg" width = "100%">
+			</br>
+			</br>
 		</div>
 		<div class="right col-lg-2">
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -36,6 +37,6 @@
 	</div>
 </body>
 <footer>
-	<p>Copyright &copy Brycen Cloward 2018</p>
+	<p>Copyright &copy Brycen Cloward November 3, 2018</p>
 </footer>
 </html>
