--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-lg-2">
+		<div class="left col-xs-2">
 			<a href = "#"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-lg-8">
+		<div class="content col-xs-8">
 			<h1>This is Me</h1>
 			<p>My name is Brycen Cloward. I'm originally from Kuna, Idaho, and am now residing in Lewiston, Idaho.
 			</p>
@@ -37,7 +37,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-lg-2">
+		<div class="right col-xs-2">
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
