--- a/experience.html
+++ b/experience.html
@@ -19,10 +19,10 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-lg-2">
+		<div class="left col-xs-8">
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-lg-8">
+		<div class="content col-xs-8">
 			<h1>Experience</h1>
 			<p>Experience with mutliple web languages and tools, including:</p>
 			<ul>
@@ -42,7 +42,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-lg-2">
+		<div class="right col-xs-8">
 			<a href = "hobbies.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
