--- a/hobbies.html
+++ b/hobbies.html
@@ -19,10 +19,10 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-lg-2">
+		<div class="left col-xs-8">
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-lg-8">
+		<div class="content col-xs-8">
 			<h1>Hobbies</h1>
 			<p>My personal interests. </p>
 			<p>I enjoy being a generally creative person. I like to draw and write, but most important to me is
@@ -40,7 +40,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-lg-2">
+		<div class="right col-xs-8">
 			<a href = "#"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
