--- a/projects.html
+++ b/projects.html
@@ -19,10 +19,10 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-lg-2">
+		<div class="left col-xs-8">
 			<a href = "index.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-lg-8">
+		<div class="content col-xs-8">
 			<h1>Projects</h1>
 			<p>The majority of projects that I have worked on up to this point have been for college.</p>
 			<p>For example, my involvement with this project:</p>
@@ -32,7 +32,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-lg-2">
+		<div class="right col-xs-8">
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
