--- a/hobbies.html
+++ b/hobbies.html
@@ -19,11 +19,11 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-xs-8">
+		<div class="left col-sm-2">
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-xs-8">
-			<h1>Hobbies</h1>
+		<div class="content col-sm-8">
+			<h2>Hobbies</h2>
 			<p>My personal interests. </p>
 			<p>I enjoy being a generally creative person. I like to draw and write, but most important to me is
 			trying new creative interests.</p>
@@ -40,7 +40,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-xs-8">
+		<div class="right col-sm-2">
 			<a href = "#"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
