--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-xs-2">
+		<div class="left col-sm-2">
 			<a href = "#"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-xs-8">
-			<h1>This is Me</h1>
+		<div class="content col-sm-8">
+			<h2>This is Me</h2>
 			<p>My name is Brycen Cloward. I'm originally from Kuna, Idaho, and am now residing in Lewiston, Idaho.
 			</p>
 			<img src = "images/me.jpg" alt = "me">
@@ -37,7 +37,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-xs-2">
+		<div class="right col-sm-2">
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
