--- a/experience.html
+++ b/experience.html
@@ -19,11 +19,11 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-xs-8">
+		<div class="left col-sm-2">
 			<a href = "projects.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-xs-8">
-			<h1>Experience</h1>
+		<div class="content col-sm-8">
+			<h2>Experience</h2>
 			<p>Experience with mutliple web languages and tools, including:</p>
 			<ul>
 				<li>HTML</li>
@@ -42,7 +42,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-xs-8">
+		<div class="right col-sm-2">
 			<a href = "hobbies.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
