--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,11 @@
 </header>
 <body>
 	<div class="main">
-		<div class="left col-xs-8">
+		<div class="left col-sm-2">
 			<a href = "index.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		</div>
-		<div class="content col-xs-8">
-			<h1>Projects</h1>
+		<div class="content col-sm-8">
+			<h2>Projects</h2>
 			<p>The majority of projects that I have worked on up to this point have been for college.</p>
 			<p>For example, my involvement with this project:</p>
 			<img src = "images/nsg1.png" alt = "nsg" width = "100%">
@@ -32,7 +32,7 @@
 			</br>
 			</br>
 		</div>
-		<div class="right col-xs-8">
+		<div class="right col-sm-2">
 			<a href = "experience.html"><span class="glyphicon glyphicon-chevron-right"></span></a>
 		</div>
 	</div>
